--- a/Sales_Backend/src/main/resources/application.properties
+++ b/Sales_Backend/src/main/resources/application.properties
@@ -1,27 +1,23 @@
 spring.application.name=Sales_Backend
-server.port=9090
+
 spring.datasource.url=jdbc:mysql://localhost:3306/Sales
 spring.datasource.username=root
 spring.datasource.password=root
+server.port=9090
+
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.security.enabled=false
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-jwt.secret=kodnest1230123
-
-jwt.expiration=3600000
-
-#Enable CORS for specific endpoints
-
-spring.web.cors.allowed-origin-patterns=http://localhost: 5173
-
+# Enable CORS for specific endpoints
+spring.web.cors.allowed-origin-patterns=http://localhost:5173
 spring.web.cors.allowed-methods=GET, POST, PUT, DELETE, OPTIONS
-
-spring.web.cors.allowed-headers=*
-
-spring.web.cors.exposed-headers=*
-
+spring.web.cors.allowed-headers =*
+spring.web.cors.exposed-headers =*
 spring.web.cors.allow-credentials=true
-
 spring.web.cors.max-age=3600
 
