--- a/Sales_Backend/src/main/resources/application.properties
+++ b/Sales_Backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=Sales_Backend
 
-spring.datasource.url=jdbc:mysql://localhost:3306/Sales
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USER}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 server.port=9090
 
 
