--- a/Sales_Backend/src/main/resources/application.properties
+++ b/Sales_Backend/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.security.enabled=false
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+jwt.secret=Sukumar@123
+jwt.expiration=3600000
 
 # Enable CORS for specific endpoints
 spring.web.cors.allowed-origin-patterns=http://localhost:5173
