--- a/Sales_Backend/pom.xml
+++ b/Sales_Backend/pom.xml
@@ -29,52 +29,77 @@
     <properties>
         <java.version>17</java.version>
     </properties>
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt</artifactId>
-            <version>0.9.1</version>
 
-        </dependency>
+    <dependencies>
+
+        <!-- Spring Boot Web starter (REST API, etc.) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+        <!-- Spring Data JPA for ORM and database interaction -->
         <dependency>
-            <groupId>jakarta.servlet</groupId>
-            <artifactId>jakarta.servlet-api</artifactId>
-            <version>6.0.0</version>
-            <scope>provided</scope>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
+        <!-- Spring Security for Authentication/Authorization -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+
+        <!-- MySQL JDBC Driver (ensure correct version) -->
         <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version> <!-- Ensure this version is correct -->
+        </dependency>
+        <dependency>
+
             <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-test</artifactId>
-            <scope>test</scope>
+
+            <artifactId>spring-security-crypto</artifactId>
+
+        </dependency>
+
+        <dependency>
+
+            <groupId>io.jsonwebtoken</groupId>
+
+            <artifactId>jjwt-api</artifactId>
+
+            <version>0.11.5</version>
+
+        </dependency>
+
+        <dependency>
+
+            <groupId>io.jsonwebtoken</groupId>
+
+            <artifactId>jjwt-impl</artifactId>
+
+            <version>0.11.5</version>
+
+            <scope>runtime</scope>
+
+        </dependency>
+
+        <dependency>
+
+            <groupId>io.jsonwebtoken</groupId>
+
+            <artifactId>jjwt-jackson</artifactId>
+
+            <version>0.11.5</version>
+
+            <scope>runtime</scope>
+
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
     </dependencies>
@@ -85,8 +110,6 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-
         </plugins>
     </build>
-
 </project>
