check in backend

--- a/Sales_Backend/src/main/resources/application.properties
+++ b/Sales_Backend/src/main/resources/application.properties
@@ -1,25 +1,25 @@
 spring.application.name=Sales_Backend
 
-spring.datasource.url=${DATASOURCE_URL}
-spring.datasource.username=${DATASOURCE_USER}
-spring.datasource.password=${DATASOURCE_PASSWORD}
+
 server.port=9090
-
-
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/sales
+spring.datasource.username=root
+spring.datasource.password=root
+#spring.jpa.hibernate.ddl-auto=update
 spring.security.enabled=false
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-jwt.secret=Sukumar@123
+jwt.secret=kodnest123@123
 jwt.expiration=3600000
+spring.jpa.hibernate.ddl-auto=validate
 
 # Enable CORS for specific endpoints
 spring.web.cors.allowed-origin-patterns=http://localhost:5173
-spring.web.cors.allowed-methods=GET, POST, PUT, DELETE, OPTIONS
-spring.web.cors.allowed-headers =*
-spring.web.cors.exposed-headers =*
+spring.web.cors.exposed-headers=*
+spring.web.cors.max-age=36000
+spring.web.cors.allowed-origins=http://localhost:5173
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=Content-Type,Authorization
 spring.web.cors.allow-credentials=true
-spring.web.cors.max-age=3600
 
+logging.level.root=INFO
+logging.level.org.springframework.web=INFO
